--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="landing">
         <h1>Happy Anniversary, Love!</h1>
         <p>Here's to many more years of love and happiness together.</p>
-        <button id="enterBtn">Enter</button>
+        <button id="enterBtn">way to my heart</button>
     </section>
 
     <!-- Hidden Content - Will show after Enter Button is clicked -->
